[package]
name = "norg-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["bindings/js"]

[dependencies]
itertools = "0.14.0"
janetrs = { git = "https://github.com/boltlessengineer/janetrs", branch = "feat/unmarshal" }
# janetrs = { path = "../../repo/janetrs" }
serde = { version = "1.0.219", features = ["derive"] }
tree-sitter = { version = "0.25.3", features = [ "wasm" ] }
tree-sitter-norg = { git = "https://github.com/boltlessengineer/tree-sitter-norg3-pr1", branch = "experiment" }
unicode_categories = "0.1.1"

[dev-dependencies]
serde_json = "1.0.140"
# tree-sitter-norg = { path = "../tree-sitter-norg3" }
